2011-11-07  Alan Modra  <amodra@gmail.com>

	PR target/30282
	* config/rs6000/rs6000.c (rs6000_emit_stack_reset): Always emit
	blockage for ABI_V4.

2011-11-04  Eric Botcazou  <ebotcazou@adacore.com>

	PR c++/50608
	* c-parser.c (c_parser_postfix_expression) <RID_OFFSETOF>: Adjust call
	to fold_offsetof.
	* c-typeck.c (build_unary_op) <ADDR_EXPR>: Call fold_offsetof_1.

2011-11-04  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/50979
	* config/sparc/sparc.h (ASM_CPU_SPEC): Pass -Av8 if -mcpu=v8.

2011-11-03  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (lround<X87MODEF:mode><SWI248x:mode>2,
	rint<mode>2, floor<mode>2, lfloor<MODEF:mode><SWI48:mode>2,
	btrunc<mode>2, lwp_lwpval<mode>3): Use operands[N] instead of operandN.

2011-11-02  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/50945
	* config/sparc/sparc.md (movsf_insn): Reindent constraints.
	(movsf_insn_no_fpu): Likewise.
	(movdf_insn_sp32): Likewise.
	(movdf_insn_sp32_no_fpu): Likewise.
	(movdf_insn_sp32_v9): Likewise.  Remove redundant GY constraint.
	(movdf_insn_sp32_v9_no_fpu): Likewise.
	(movdf_insn_sp64): Likewise.
	(movdf_insn_sp64_no_fpu): Likewise.
	(movtf_insn_sp32): Likewise.
	(movtf_insn_sp32_no_fpu): Likewise.
	(movtf_insn_sp64): Likewise.
	(movtf_insn_sp64_hq): Likewise.
	(movtf_insn_sp64_no_fpu): Likewise.

2011-11-02  Bernd Schmidt  <bernds@codesourcery.com>

	* cfgcleanup.c (try_head_merge_bb): If get_condition returns
	NULL for a jump that is a cc0 insn, pick the previous insn for
	move_before.

2011-11-01  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (splitters for int-float conversion): Use
	SUBREG_REG on SUBREGs in splitter constraints.

2011-11-01  Julian Brown  <julian@codesourcery.com>

	PR rtl-optimization/47918
	* reload1.c (set_initial_label_offsets): Use initial offsets
	for labels on the nonlocal_goto_handler_labels chain.

2011-10-29  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/50691